# simultaneous-decision-and-response

./: .gitignore  Articles highlights.md  CMakeLists.txt  README.md  example.argos
code/: CMakeLists.txt
code/controllers/: CMakeLists.txt  CollisionAvoidanceParams.cpp  CollisionAvoidanceParams.h  FootBotBaseController.cpp  FootBotBaseController.h  FootBotGateGrippingController.cpp  FootBotGateGrippingController.h  FootBotTemperatureSensingController.cpp  FootBotTemperatureSensingController.h  footbot_base.cpp  footbot_base.h  footbot_gate_gripping.cpp  footbot_gate_gripping.h  footbot_temperature_sensing.cpp  footbot_temperature_sensing.h
code/controllers/enums/: BehaviorState.h  TurnMode.h
code/controllers/footbot_base/: CMakeLists.txt  footbot_base.cpp  footbot_base.h
code/controllers/footbot_diffusion/: footbot_diffusion.cpp  footbot_diffusion.h
code/controllers/footbot_gate_gripping/: CMakeLists.txt  footbot_gate_gripping.cpp  footbot_gate_gripping.h
code/controllers/footbot_gripping/: CMakeLists.txt  footbot_gripping.cpp  footbot_gripping.h
code/controllers/footbot_temperature_sensing/: CMakeLists.txt  footbot_temperature_sensing.cpp  footbot_temperature_sensing.h
code/controllers/params/: MovementParams.cpp
code/experiments/: fire_evac.argos  fire_evacuation.argos
code/loop_functions/: CMakeLists.txt  FireEvacuationLoopFunctions.cpp  FireEvacuationLoopFunctions.h  FireParams.cpp  FireParams.h  HeatMapParams.cpp  HeatMapParams.h
code/loop_functions/params/: FireParams.h
code/plot/: Application.cpp  CMakeLists.txt  MainWindow.cpp  MainWindow.h  PlotApplication.cpp  PlotApplication.h  mainwindow.ui
code/user_functions/: CMakeLists.txt
documentation/: documentation.md  example.argos
experiments/: fire_evacuation.argos
logs/: log.txt
src/aggregate/: aggregate-multiple.sh  aggregate-non-symmetric-multiple.sh  aggregate-non-symmetric-single.sh  aggregate-non-symmetric.cpp  aggregate-single.sh  aggregate-symmetric-multiple.sh  aggregate-symmetric-single.sh  aggregate-symmetric.cpp  aggregate.cpp  aggregate.sh
src/controllers/: CMakeLists.txt  FootBotBaseController.cpp  FootBotBaseController.h  FootBotController.cpp  FootBotController.h  FootBotGateGrippingController.cpp  FootBotGateGrippingController.h  FootBotTemperatureSensingController.cpp  FootBotTemperatureSensingController.h  GateGrippingFootBotController.cpp  GateGrippingFootBotController.h  TemperatureSensingFootBotController.cpp  TemperatureSensingFootBotController.h
src/controllers/enums/: BehaviorState.h  BehaviourState.h  RABIndex.h
src/controllers/params/: AppearanceParams.cpp  AppearanceParams.h  CollisionAvoidanceParams.cpp  CollisionAvoidanceParams.h  DecisionStrategyParams.cpp  DecisionStrategyParams.h  MovementParams.cpp  MovementParams.h  ReactionStrategyParams.cpp  ReactionStrategyParams.h  VotingStrategyParams.cpp  VotingStrategyParams.h
src/loop_functions/: CMakeLists.txt  FireEvacuationLoopFunctions.cpp  FireEvacuationLoopFunctions.h
src/loop_functions/params/: FireParams.cpp  FireParams.h  HeatMapParams.cpp  HeatMapParams.h  LogParams.cpp  LogParams.h  NestParams.cpp  NestParams.h  PlotParams.cpp  PlotParams.h
src/plot/: Application.cpp  Application.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  autocomplete.sh  coldecplot.1  coldecplot.desktop  coldecplot.pro  swarm-robotics-thesis.pro
src/plot/lib/: qcustomplot.cpp  qcustomplot.h
src/seed/: Application.cpp  Application.h  CMakeLists.txt  Seed.cpp  autocomplete.sh  coldecseed.1
src/user_functions/: CMakeLists.txt  FireEvacuationUserFunctions.cpp  FireEvacuationUserFunctions.h
src/user_functions/params/: DividerParams.cpp  DividerParams.h
thesis/: Articles highlights.md  Logboek.docx  a1.md  a2.md  a3.md  a4.md  a5.md  a6.md  articles.md  meetings.md  todo.md
